--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,16 @@
 
 <head>
   <base href="/">
+  <!-- Material Design fonts -->
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- Animate css -->
+  <link rel="stylesheet" type="text/css" href="./lib/animate.css/animate.min.css">
+  <!-- Bootstrap -->
+  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <!-- Bootstrap Material Design -->
+  <link rel="stylesheet" type="text/css" href="./lib/bootstrap-material-design/dist/css/bootstrap-material-design.css">
+  <link rel="stylesheet" type="text/css" href="./lib/bootstrap-material-design/dist/css/ripples.min.css">
   <!-- css -->
   <link rel=stylesheet href="./css/index.css">
   <title>Insertion Sort Chart JS</title>
@@ -12,18 +22,18 @@
 </head>
 
 <body ng-app="schort">
-  <div ng-controller="sortController">
-    <div>
-      <h1>Insertion sorter</h1>
+  <div class="container" ng-controller="sortController">
+    <div style="text-align:center">
+      <h1 class="animated infinite flash">Insertion Sorter</h1>
     </div>
-    <div>
+    <div class="form-group">
       <input ng-model="numInput" type="radio" value=10>Ten Random</input>
       <input ng-model="numInput" type="radio" value=25>Twenty Five Random</input>
       <input ng-model="numInput" type="radio" value=40>Forty Random</input>
       <button ng-click="randomizer(numInput)">Randomize</button>
     </div>
     <div>
-      <p>Test array: {{ testArray }}</p>
+      <p style="text-align:center">Test array: {{ testArray }}</p>
       <button ng-click="plotter()">Plot</button>
       <button ng-click="sorter()">Sort</button>
     </div>
