makes the heading bold

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
 <body ng-app="schort">
   <div class="container" ng-controller="sortController">
     <div style="text-align:center">
-      <h1 class="animated infinite flash">Insertion Sorter</h1>
+      <h1 class="animated infinite flash"><bold>Insertion Sorter</bold></h1>
     </div>
     <div class="form-group">
       <input ng-model="numInput" type="radio" value=10>Ten Random</input>
